--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,57 @@
+/* 
+==========================================================================
+전체 CSS 구조
+==========================================================================
+- #section: 메인 페이지의 중심 섹션
+  |__ .title: 섹션의 메인 제목 스타일링
+- .main__banner: 배너 섹션
+  |__ .container: 배너 이미지와 액션 링크를 포함하는 컨테이너
+- .main__info: 정보 섹션
+  |__ .main__info__title: 정보 섹션의 제목
+  |__ .main__info__post: 포스트 컨테이너
+      |__ .main__post__style.column4: 4열 포스트 스타일
+          |__ .post: 개별 포스트
+              |__ .tit: 포스트 제목
+              |__ .pic: 포스트 이미지
+              |__ .day: 포스팅 날짜
+              |__ .like: 좋아요 버튼
+              |__ .post__con: 포스트 컨텐츠
+                  |__ .post__left: 컨텐츠 왼쪽 부분
+                  |__ .post__right: 컨텐츠 오른쪽 부분
+- .main__sub: 부가 정보 섹션
+- .main__rank: 마라톤 순위 섹션
+  |__ .main__rank__title: 순위 섹션의 제목
+  |__ .main__info__post.rank: 순위 정보를 보여주는 포스트
+      |__ .main__post__style.column3: 3열 포스트 스타일
+          |__ .post.rank1: 1등 포스트
+          |__ .post.rank2: 2등 포스트
+          |__ .post.rank3: 3등 포스트
+- .main__crew: 크루 정보 섹션
+  |__ .main__crew__title: 크루 섹션의 제목
+  |__ .main__crew__rank: 크루 랭킹
+      |__ .crew__rank.column4: 4열 크루 랭킹
+          |__ .crew: 개별 크루
+              |__ .crew-tit: 크루 제목
+              |__ .crew-day: 크루 활동 날짜
+              |__ img: 크루 이미지
+- .main__community: 커뮤니티 섹션
+  |__ .main__community__title: 커뮤니티 제목
+  |__ .main__community__mojib: 커뮤니티 모집 정보
+      |__ .box1, .box2, .box3, .box4: 정보 박스
+- .main__news: 뉴스 섹션
+  |__ .main__news__title: 뉴스 제목
+  |__ .main__news__style: 뉴스 스타일
+      |__ .post: 뉴스 포스트
+- .main__footer: 페이지 푸터
+  |__ .container: 푸터 컨테이너
+      |__ span: 푸터 텍스트
+========================================================================== */
+
+/*
+==========================================================================
+SECTION: 메인 페이지 섹션
+- 메인 페이지의 핵심 콘텐츠를 담는 섹션으로, 전체 화면을 차지하며 센터 정렬됩니다.
+========================================================================== */
 #section {
     width: 100%;
     height: 100vh;
@@ -19,15 +73,28 @@
     color: var(--mainColor);
 }
 
-@media (max-width:1150px) {
+@media (max-width:1190px) {
 
-    #section {
-        height: 80vh;
+    #section .title>h1 {
+        font-size: 18rem;
     }
+}
 
-    #section .title {
-        text-align: center;
+@media (max-width:1094px) {
+
+    #section .title>h1 {
+        font-size: 16rem;
     }
+}
+
+@media (max-width:980px) {
+
+    #section .title>h1 {
+        font-size: 15rem;
+    }
+}
+
+@media (max-width:916px) {
 
     #section .title>h1 {
         font-size: 14rem;
@@ -35,37 +102,46 @@
 }
 
 @media (max-width:800px) {
-    #section {
-        height: 50vh;
-    }
 
     #section .title>h1 {
-        font-size: 12rem;
+        font-size: 13rem;
     }
+}
 
-    #section .title {
-        margin-top: 8rem;
-        text-align: center;
+@media (max-width:700px) {
+
+    #section .title>h1 {
+        font-size: 11rem;
     }
 }
 
 @media (max-width:600px) {
-    #section {
-        height: 40vh;
-    }
 
-    #section .title {
-        margin-top: 11rem;
-        text-align: center;
+    #section .title>h1 {
+        font-size: 10rem;
     }
+}
+
+
+@media (max-width:500px) {
 
     #section .title>h1 {
         font-size: 7rem;
     }
 }
 
-/* // .title */
+@media (max-width:400px) {
 
+    #section .title>h1 {
+        font-size: 6.5rem;
+    }
+}
+
+/* 
+==========================================================================
+main__banner: 메인 배너 섹션
+- 메인 배너 이미지와 액션 콜 링크를 포함하는 중요한 시각적 요소입니다.
+========================================================================== */
 .main__banner {
     text-align: center;
     height: 100vh;
@@ -85,9 +161,7 @@
 
 .main__banner .container>img {
     width: 100%;
-    /* 이미지 너비를 컨테이너에 맞춤 */
     height: 100%;
-    /* 이미지 높이를 자동으로 조정해 비율을 유지 */
     position: absolute;
     top: -10%;
     left: 0;
@@ -114,19 +188,18 @@
 
 @media (max-width:1000px) {
     .main__banner {
-        height: 80vh;
-        /* 높이를 줄입니다 */
+        height: 100vh;
+        padding-top: 6rem;
     }
 
     .main__banner .container {
-        width: 100%;
-        height: 100%;
         border-radius: 20rem 20rem 1.875rem 1.875rem;
+        max-height: 800px;
     }
 
     .main__banner .container>img {
         width: 100%;
-        height: 90%;
+        height: 100%;
     }
 
     .main__banner .container a {
@@ -137,13 +210,13 @@
 
 @media (max-width:800px) {
     .main__banner {
-        height: 90vh;
+        height: 100vh;
+        padding-top: 8rem;
     }
 
     .main__banner .container {
-        width: 100%;
-        height: 100%;
         border-radius: 20rem 20rem 1.875rem 1.875rem;
+        max-height: 600px;
     }
 
     .main__banner .container>img {
@@ -159,13 +232,13 @@
 
 @media (max-width:700px) {
     .main__banner {
-        height: 50vh;
+        height: 100vh;
+        padding-top: 8rem;
     }
 
     .main__banner .container {
-        width: 100%;
-        height: 100%;
         border-radius: 20rem 20rem 1.875rem 1.875rem;
+        max-height: 600px;
     }
 
     .main__banner .container>img {
@@ -181,26 +254,28 @@
 
 @media (max-width:500px) {
     .main__banner {
-        height: 40vh;
+        height: 100vh;
     }
 
     .main__banner .container {
         width: 100%;
-        height: 100%;
+        max-height: 500px;
         border-radius: 9rem 9rem 1rem 1rem;
 
     }
 
     .main__banner .container a {
+        display: inline-block;
         padding: 0.5rem 1.5rem;
-        /* 더 작은 버튼 패딩 */
         font-size: 0.75rem;
-        /* 더 작은 폰트 사이즈 */
     }
 }
 
-/* // .banner */
-
+/* 
+==========================================================================
+main__info: 정보 섹션
+- 사이트에서 제공하는 중요 정보나 게시물을 보여주는 섹션입니다.
+========================================================================== */
 .main__info .container .main__info__title {
     display: flex;
     justify-content: center;
@@ -255,9 +330,16 @@
     align-items: center;
 }
 
-.main__info__post>a {
+.main__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.main__info>a {
     display: inline-block;
-    margin-top: 5rem;
     background-color: var(--pointColor);
     color: var(--mainColor);
     font-family: var(--fontG);
@@ -267,7 +349,7 @@
     transition: all 0.3s;
 }
 
-.main__info__post>a:hover {
+.main__info>a:hover {
     color: var(--white);
     background-color: var(--mainColor);
 }
@@ -277,97 +359,185 @@
     height: 100%;
 }
 
-.main__info__post .content1 {
+.main__info__post {
     margin-top: 5rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-bottom: 5rem;
 }
 
-.post {
+.main__post__style {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.main__post__style .post {
+    width: 32%;
+    margin-bottom: 2%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    padding: 2rem 2rem 0 2rem;
+    position: relative;
 }
 
-#post1,
-#post2,
-#post3 {
-    width: 100%;
-    height: 100%;
-    background-color: var(--white);
-    margin-right: 1rem;
-    border-radius: 30px;
+.main__post__style .post.rank1::after {
+    content: '';
+    width: 80px;
+    height: 130px;
+    left: 20px;
+    top: 0;
+    background-image: url(../ico/rank/rank_ico-1.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    z-index: 100;
 }
 
-#post1 .post img,
-#post2 .post img,
-#post3 .post img {
-    width: 100%;
-    max-height: 345px;
-    min-height: 345px;
-    object-fit: cover;
-    border-radius: 22px;
+.main__post__style .post.rank2::after {
+    content: '';
+    width: 80px;
+    height: 130px;
+    left: 20px;
+    top: 0;
+    background-image: url(../ico/rank/rank_ico-2.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    z-index: 100;
 }
 
-@media(max-width:1000px) {}
+.main__post__style .post.rank3::after {
+    content: '';
+    width: 80px;
+    height: 130px;
+    left: 20px;
+    top: 0;
+    background-image: url(../ico/rank/rank_ico-3.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: absolute;
+    z-index: 100;
+}
 
-@media (max-width:500px) {
+.main__post__style .post img {
+    border-radius: 20px 20px 0 0;
+    max-height: 400px;
+    min-height: 400px;
+}
 
-    #post1,
-    #post2,
-    #post3 {
-        margin-bottom: 2rem;
+.main__post__style.column4 .post {
+    width: 24%;
+}
+
+.main__post__style.column3 .post {
+    width: 32%;
+}
+
+.main__post__style.column2 .post {
+    width: 49%;
+}
+
+.main__post__style.column1 .post {
+    width: 96%;
+}
+
+@media (max-width:800px) {
+
+    .main__post__style {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .main__post__style.column4 .post {
+        width: 49%;
+    }
+
+    .main__post__style.column3 .post {
+        width: 49%;
     }
 }
 
+@media (max-width:500px) {
+
+    .main__post__style {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .main__post__style.column4 .post {
+        width: 96%;
+        margin-bottom: 5%;
+    }
+
+    .main__post__style.column3 .post {
+        width: 96%;
+        margin-bottom: 5%;
+    }
+}
+
+
 .post .tit {
-    padding: 0.625rem 0 0 0;
+    padding: 1rem 0 0 1rem;
     font-size: 1.25rem;
     color: var(--mainColor);
     font-family: var(--fontN);
     font-weight: 700;
+    background-color: var(--white);
 }
 
 .post .pic {
+    padding: 1rem 0 0 1rem;
     padding-top: 0.3125rem;
     font-size: 1rem;
     font-family: var(--fontN);
     font-weight: 700;
+    background-color: var(--white);
 }
 
 .post .day {
-    font-size: 0.875rem;
+    padding: 0 0.5rem 0 1rem;
+    font-size: 0.75rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: var(--black500);
+    background-color: var(--white);
 }
 
-.post .day li:nth-child(2) {
-    border: 1px solid var(--mainColor);
-    padding: 4px 10px;
-    border-radius: 20px;
-    color: var(--mainColor);
+.post ul {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--white);
+}
+
+.post .like {
+    width: 30px;
+    height: 30px;
+    background-image: var(--heart);
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-right: 1rem;
+    cursor: pointer;
+}
+
+.post .like.active {
+    background-image: var(--heartRed);
 }
 
 .post__con {
     width: 100%;
-    margin-top: 1.25rem;
+    padding-top: 1rem;
     display: flex;
     justify-content: center;
     text-align: center;
-    border-radius: 0 0 30px 30px;
+    background-color: var(--white);
+    border-radius: 0 0 20px 20px;
 }
 
 .post__con .post__left {
     width: 50%;
     background-color: var(--pointColor);
-    border-radius: 0 0 0 30px;
-    border-right: 1px solid var(--mainColor);
+    border-radius: 0 0 0 20px;
 }
 
 
@@ -387,7 +557,7 @@
 .post__con .post__right {
     width: 50%;
     background-color: var(--pointColor);
-    border-radius: 0 0 30px 0;
+    border-radius: 0 0 20px 0;
 }
 
 .post__con .post__right img {
@@ -418,7 +588,11 @@
     }
 }
 
-/* //main__info */
+/* 
+==========================================================================
+ SUB: 부가 정보 섹션
+ - 추가적인 정보를 제공하는 서브 섹션으로, 다양한 컨텐츠를 배치할 수 있습니다.
+ ========================================================================== */
 
 .main__sub {
     margin-top: 10rem;
@@ -446,7 +620,11 @@
     }
 }
 
-/* //main__sub */
+/* 
+==========================================================================
+RANK: 순위 섹션
+- 사용자 또는 대상의 순위를 보여주는 섹션으로, 경쟁적 요소를 강조합니다.
+========================================================================== */
 
 .main__rank .container .main__rank__title {
     display: flex;
@@ -495,144 +673,11 @@
 
 }
 
-.main__rank__post {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10rem;
-}
-
-.main__rank__post>a {
-    display: inline-block;
-    margin-top: 5rem;
-    background-color: var(--pointColor);
-    color: var(--mainColor);
-    font-family: var(--fontG);
-    font-weight: 600;
-    padding: 0.625rem 3.125rem;
-    border-radius: 2rem;
-    transition: all 0.3s;
-}
-
-.main__rank__post>a:hover {
-    color: var(--white);
-    background-color: var(--mainColor);
-}
-
-.main__rank__post .container {
-    width: 100%;
-    height: 100%;
-}
-
-.main__rank__post .content1 {
-    margin-top: 5rem;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#rank__post1,
-#rank__post2,
-#rank__post3 {
-    width: 100%;
-    height: 100%;
-    background-color: var(--white);
-    margin-right: 1rem;
-    border-radius: 30px;
-    position: relative;
-}
-
-#rank__post1 .post img,
-#rank__post2 .post img,
-#rank__post3 .post img {
-    width: 100%;
-    max-height: 345px;
-    min-height: 345px;
-    object-fit: cover;
-    border-radius: 22px;
-}
-
-#rank__post1::after {
-    content: '';
-    width: 100%;
-    height: 20%;
-    position: absolute;
-    top: 0;
-    right: -32px;
-    background-image: url(../ico/rank/rank_ico-1.svg);
-    background-repeat: no-repeat;
-}
-
-
-#rank__post2::after {
-    content: '';
-    width: 100%;
-    height: 20%;
-    position: absolute;
-    top: 0;
-    right: -32px;
-    background-image: url(../ico/rank/rank_ico-2.svg);
-    background-repeat: no-repeat;
-}
-
-
-#rank__post3::after {
-    content: '';
-    width: 100%;
-    height: 20%;
-    position: absolute;
-    top: 0;
-    right: -32px;
-    background-image: url(../ico/rank/rank_ico-3.svg);
-    background-repeat: no-repeat;
-}
-
-@media (max-width:1000px) {
-    .main__rank__post .content1 {
-        display: flex;
-    }
-
-    .rank__post {
-        margin-top: 2rem;
-        margin-left: 1rem;
-    }
-
-    #rank__post1 img,
-    #rank__post2 img,
-    #rank__post3 img {
-        width: 260px;
-        height: 320px;
-        padding: 1rem 1rem 0 1rem;
-    }
-}
-
-@media (max-width:500px) {
-    .main__rank__post {
-        margin-bottom: 5rem;
-    }
-
-    .main__rank__post .content1 {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
-
-    .rank__post {
-        margin-top: 2rem;
-        margin-left: 0;
-    }
-
-    #rank__post1,
-    #rank__post2,
-    #rank__post3 {
-        margin-bottom: 2rem;
-    }
-}
-
-/* //main__crew */
+/* 
+==========================================================================
+CREW: 크루 정보 섹션
+- 팀 또는 조직의 구성원을 소개하는 섹션입니다.
+========================================================================== */
 
 .main__crew {
     background-color: var(--pointColor);
@@ -695,43 +740,44 @@
 
 }
 
-.main__crew__rank {
-    width: 100%;
-    height: 100%;
-    margin-top: 5rem;
+.crew__rank {
+    margin-top: 3.75rem;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    flex-wrap: wrap;
 }
 
-.crew__rank1,
-.crew__rank2,
-.crew__rank3,
-.crew__rank4 {
-    width: 23%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--mainColor);
-    margin: 5px;
-    padding-bottom: 1.875rem;
-    padding-left: 2rem;
+.crew__rank .crew {
+    width: 32%;
+    margin-bottom: 2%;
     border-radius: 30px;
+    padding: 30px;
 }
 
-.crew__rank1>img,
-.crew__rank2>img,
-.crew__rank3>img,
-.crew__rank4>img {
-    width: 40%;
-    height: 100%;
-    padding-top: 2.5rem;
+.crew__rank.column4 .crew {
+    width: 24%;
+    background-color: var(--mainColor);
+}
+
+.crew__rank.column4 .post {
+    width: 24%;
+}
+
+.crew__rank.column3 .post {
+    width: 32%;
+}
+
+.crew__rank.column2 .post {
+    width: 49%;
+}
+
+.crew__rank.column1 .post {
+    width: 96%;
 }
 
 .crew-tit {
-    margin-top: 1.875rem;
-    font-size: 0.875rem;
     width: 25%;
+    font-size: 0.875rem;
     border-radius: 30px;
     text-align: center;
     border: 1px solid var(--white);
@@ -739,38 +785,51 @@
 }
 
 .crew-day {
-    margin-top: 1rem;
+    margin-top: 0.75rem;
     font-size: 1.625rem;
     font-family: var(--fontG);
     font-weight: bold;
     color: var(--white);
 }
 
+.crew>img {
+    width: 100px;
+    height: 100px;
+    padding-top: 40px;
+    padding-left: 6rem;
+}
+
+@media (max-width:950px) {
+
+    .crew__rank {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .crew__rank.column4 .crew {
+        width: 46%;
+    }
+
+    .crew img {
+        width: 100px;
+        height: 100px;
+        padding-top: 40px;
+        padding-left: 8rem;
+    }
+}
+
 @media (max-width:500px) {
 
-    .crew__rank1,
-    .crew__rank2,
-    .crew__rank3,
-    .crew__rank4 {
-        padding-left: 1rem;
+    .crew__rank {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
 
-    .crew-tit {
-        margin-top: 1rem;
-        font-size: 0.75rem;
-        width: 50%;
-    }
-
-    .crew-day {
-        margin-top: 0.875rem;
-        font-size: 0.875rem;
-    }
-
-    .crew__rank1>img,
-    .crew__rank2>img,
-    .crew__rank3>img,
-    .crew__rank4>img {
-        padding-top: 1rem;
+    .crew__rank.column4 .crew {
+        width: 80%;
     }
 }
 
@@ -794,8 +853,11 @@
     padding: 2rem;
 }
 
-/* //crew__rank */
-
+/* 
+==========================================================================
+NEWS: 뉴스 섹션
+- 최신 뉴스나 업데이트를 표시하는 섹션입니다.
+========================================================================== */
 .main__news {
     padding-bottom: 10rem;
 }
@@ -816,7 +878,6 @@
     font-size: 2.875rem;
     padding: 0.625rem;
     font-weight: 900;
-
 }
 
 
@@ -845,38 +906,59 @@
     .main__news__title p {
         font-size: 1rem;
     }
-
 }
 
-.main__news__post {
-    width: 100%;
-    height: 100%;
+.main__news__style {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 6rem;
+}
+
+.main__news__style:last-child {
+    margin-top: 1rem;
+}
+
+.main__news__style .post {
+    width: 32%;
+    margin-bottom: 2%;
+}
+
+.main__news__style.column4 .post {
+    width: 24%;
+    background-color: var(--white);
+    padding: 20px;
+    border-radius: 18px;
+}
+
+.main__news__style.column4 .post a {
     display: flex;
     flex-direction: column;
 }
 
-.main__news__post .content1,
-.main__news__post .content2 {
-    display: flex;
+.main__news__style.column4 .post img {
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 
-.main__news__post .content1 .post>a:hover,
-.main__news__post .content2 .post>a:hover {
-    outline: 10px solid var(--mainColor);
-    border-radius: 30px;
-    transition: all 0.3s;
+.news-tit {
+    color: var(--mainColor);
+    font-size: 1.25rem;
+    font-family: var(--fontG);
+    font-weight: 500;
 }
 
-@media (max-width:500px) {
-
-    .main__news__post .content1,
-    .main__news__post .content2 {
-        display: flex;
-        flex-direction: column;
-    }
+.news-pic {
+    font-size: 0.825rem;
+    padding-top: 5px;
 }
 
-/* //main__news */
+/* 
+==========================================================================
+COMMUNITY: 커뮤니티 섹션
+- 사용자 참여와 커뮤니티 구성을 위한 섹션입니다.
+========================================================================== */
 
 .main__community {
     padding-bottom: 10rem;
@@ -971,7 +1053,11 @@
     padding-left: 5rem;
 }
 
-/* //main__community */
+/* 
+==========================================================================
+FOOTER: 페이지 푸터
+- 저작권 정보, 연락처 정보 등을 포함하는 페이지의 하단 부분입니다.
+========================================================================== */
 
 .main__footer .container {
     display: flex;
