--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,27 @@
 /* 
-header__inner: 네비게이션 및 로그인/회원가입 영역
-header__inner .nav: 네비게이션 메뉴
-header__inner .member: 로그인 / 회원가입 
+==========================================================================
+CSS 구조 개요
+==========================================================================
+- #header: 전체 헤더 섹션
+  |-- .header__inner: 네비게이션 및 로그인/회원가입 영역
+    |-- .logo: 로고 영역
+      |-- img: 로고 이미지 스타일
+    |-- .nav: 네비게이션 메뉴
+      |-- ul: 네비게이션 메뉴 목록
+        |-- li: 네비게이션 메뉴 항목
+          |-- a: 네비게이션 메뉴 링크
+    |-- .member: 로그인 / 회원가입
+      |-- ul: 로그인 / 회원가입 목록
+        |-- li > a: 로그인 / 회원가입 링크
+- .modal_btn: 모달 버튼 스타일
+- .modal__inner: 모달 내부 스타일
+- .modal: 모달 스타일
+  |-- .modal_popup: 모달 팝업 스타일
+    |-- span: 팝업 텍스트 스타일
+    |-- em: 강조 텍스트 스타일
+    |-- p: 팝업 텍스트 스타일
+- .logout_btn: 로그아웃 버튼 스타일
+==========================================================================
 */
 
 #header {
@@ -19,7 +39,7 @@ header__inner .member: 로그인 / 회원가입
 }
 
 .header__inner .logo {
-    width: 20%;
+    width: 100px;
     min-height: 3.125rem;
     text-align: center;
 }
@@ -30,7 +50,7 @@ header__inner .member: 로그인 / 회원가입
 }
 
 .header__inner .nav {
-    width: 60%;
+    width: calc(100% - 240px);
     min-height: 3.125rem;
     display: flex;
     justify-content: center;
@@ -62,7 +82,7 @@ header__inner .member: 로그인 / 회원가입
 }
 
 .header__inner .member {
-    width: 20%;
+    width: 140px;
     min-height: 3.125rem;
     display: flex;
     justify-content: center;
@@ -134,19 +154,22 @@ header__inner .member: 로그인 / 회원가입
     }
 
     .header__inner .nav>ul>li>a {
-        width: 100%;
         padding: 0.75rem;
     }
 }
 
-@media (max-width:500px) {
+@media (max-width:600px) {
     #header {
         height: auto;
         background-color: var(--backgroundColor);
     }
 
+    #header.line-bot {
+        border: 0;
+    }
+
     .header__inner {
-        font-size: 0.875rem;
+        font-size: 0.75rem;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -165,9 +188,8 @@ header__inner .member: 로그인 / 회원가입
     }
 
     .header__inner .nav>ul>li>a {
-        width: 100%;
         padding: 0.75rem;
-        font-size: 1rem;
+        font-size: 0.875rem;
     }
 
     .header__inner .member {
@@ -175,7 +197,7 @@ header__inner .member: 로그인 / 회원가입
     }
 
     .header__inner .member>ul>li>a {
-        font-size: 0.875rem;
+        font-size: 0.75rem;
     }
 }
 
@@ -184,13 +206,13 @@ header__inner .member: 로그인 / 회원가입
     display: block;
     width: 100%;
     height: 100%;
-    padding: 10px 30px;
+    padding: 10px 20px;
     font-size: 1rem;
     font-family: var(--fontG);
     font-weight: 500;
     background-color: var(--mainColor);
     color: var(--white);
-    border-radius: 30px;
+    border-radius: 10px;
     border: 1px solid var(--mainColor);
     transition: all 0.2s;
 }
