--- a/html/coding/assets/css/feed.css
+++ b/html/coding/assets/css/feed.css
@@ -1,6 +1,10 @@
 /* 
 feed__title -타이틀
 feed__info -피드메뉴
+feed__cont -피드 콘텐츠
+feed__popular -인기피드
+feed__new -최신피드
+feed__my -마이피드
  */
 
 
@@ -17,7 +21,7 @@ feed__info -피드메뉴
 
 .feed__title .title02 {
     text-align: center;
-    margin-top: 10rem;
+    margin-top: 11.5rem;
     font-size: 6.25rem;
     color: var(--mainColor);
     font-family: var(--fontO);
@@ -33,34 +37,110 @@ feed__info -피드메뉴
 
 .feed__info .feed__menu {
     display: flex;
+    justify-content: space-between;
 }
 
 .feed__info .feed__menu a {
     font-family: 'GmarketSans';
     color: var(--mainColor);
-    line-height: 5;
-    font-size: 1.25rem;
-    margin-left: 1.875rem;
+    font-size: 1.125rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
-    display: inline-block;
-    width: 33.333%;
-    height: 5.625rem;
+    width: 25rem;
+    height: 4.625rem;
     background-color: var(--pointColor);
-    text-align: center;
     border-radius: 1rem;
+    margin-bottom: 4.3rem;
+    transition: all 0.3s;
 }
 
 .feed__info .feed__menu a:hover {
     font-family: 'GmarketSans';
     color: var(--pointColor);
-    line-height: 5;
-    font-size: 1.25rem;
-    margin-left: 1.875rem;
+    font-size: 1.125rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
-    display: inline-block;
-    width: 33.333%;
-    height: 5.625rem;
+    width: 25rem;
+    height: 4.625rem;
     background-color: var(--mainColor);
-    text-align: center;
     border-radius: 1rem;
 }
+
+/* feed__cont */
+.feed__cont {
+    overflow: hidden;
+}
+
+/* feed__popular */
+.feed__popular {}
+
+.feed__popular>ul {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 3.2rem;
+}
+
+.feed__popular>ul>li {}
+
+.feed__popular>ul>li>a {}
+
+.feed__img {}
+
+.feed__img img {
+    width: 14.5rem;
+    height: 18.75rem;
+
+}
+
+.feed__img img:hover {
+    opacity: 0.8;
+}
+
+.feed__text {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 0.7rem;
+}
+
+.feed__text .feed__name {}
+
+.feed__text img {
+    width: 15px;
+    height: 16px;
+}
+
+.feed__userId {
+    font-size: 0.875rem;
+    margin-top: 0.1rem;
+    color: #676767;
+}
+
+/* feed__new */
+.feed__new {}
+
+.feed__new>ul {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 3.2rem;
+}
+
+.feed__new>ul>li {}
+
+.feed__new>ul>li>a {}
+
+/* feed__my */
+.feed__my {}
+
+.feed__my>ul {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 3.2rem;
+}
+
+.feed__my>ul>li {}
+
+.feed__my>ul>li>a {}
