--- a/html/coding/assets/css/feed.css
+++ b/html/coding/assets/css/feed.css
@@ -40,7 +40,17 @@ feed__my -마이피드
     justify-content: space-between;
 }
 
-.feed__info .feed__menu a {
+.feed__info .feed__menu ul {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+}
+
+.feed__info .feed__menu li {}
+
+.feed__info .feed__menu li a {
     font-family: 'GmarketSans';
     color: var(--mainColor);
     font-size: 1.125rem;
@@ -56,7 +66,7 @@ feed__my -마이피드
     transition: all 0.3s;
 }
 
-.feed__info .feed__menu a:hover {
+.feed__info .feed__menu li a:hover {
     font-family: 'GmarketSans';
     color: var(--pointColor);
     font-size: 1.125rem;
