--- a/html/coding/assets/css/myinfo.css
+++ b/html/coding/assets/css/myinfo.css
@@ -3,7 +3,7 @@ main__myinfo - 타이틀
 my__info - 내정보_정보수정
 
 */
-.mypage__container {}
+/* .mypage__container {}
 
 .mypage__title {
     margin-top: 10rem;
@@ -29,10 +29,10 @@ my__info - 내정보_정보수정
     color: var(--mainColor);
     font-family: var(--fontG);
     margin-bottom: 2.5rem;
-}
+} */
 
 /* mypage__information */
-.mypage__information {
+/* .mypage__information {
     width: 100%;
     height: 43rem;
 }
@@ -104,4 +104,4 @@ my__info - 내정보_정보수정
 
 .mypage__information__aside .mypage__nickname .my__name .my__info a {}
 
-.mypage__information__aside .mypage__nickname .my__name .my__info a {}
+.mypage__information__aside .mypage__nickname .my__name .my__info a {} */
